@@ -16,6 +16,7 @@ requires: [git, railsapps,
   rails_foundation,
   rails_omniauth,
   rails_devise,
+  rails_devise_roles,
   rails_devise_pundit,
   rails_signup_download,
   rails_mailinglist_signup,
