@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.12"
+  VERSION = "3.0.13"
 end
